<resources>
    <string name="app_name">Kodminne</string>
    <string name="action_settings">Inställningar</string>
    <string name="action_about">Om Appen</string>
    <string name="action_feedback">Lämna Feedback</string>
    <string name="action_quit">Avsluta</string>
    <string name="action_help">Help</string>
    <string name="action_reset">Rensa allt data</string>
    <string name="About">Kodminne 0.3 Beta / Xactimente Advanced Programing - 2018</string>
</resources>
