<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.gulstad.anders.kodminne.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="200"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="200"
        android:title="@string/action_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_quit"
        android:orderInCategory="400"
        android:title="@string/action_quit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="400"
        android:title="@string/action_reset"
        app:showAsAction="never" />


</menu>
